# danish

./: AUTHORS  ChangeLog  LICENSE  Makefile.am  NEWS  README.md  configure.ac
m4/: acx_pedantic.m4  acx_prefixhack.m4  acx_strict.m4
man/: Makefile.am  danish.1
src/: Makefile.am  cert.c  cert.h  danish.c
